tests/res/compile_errors/lambda_block_tail.say
// A block-bodied lambda does not implicitly return its tail expression either.
say f = () => { "x" }; // error: Unexpected token: Expected ';' but found '}'
